Good things working. Got selftest running and Added the RSS test. Disabled the userlogin feature pending further work as it's unfinished

--- a/behat.yml
+++ b/behat.yml
@@ -8,8 +8,8 @@ default:
         - Drupal\DrupalExtension\Context\MessageContext
         - Drupal\DrupalExtension\Context\DrushContext
         - Drupal\DrupalExtension\Context\MarkupContext
-        - Drupal\DrupalExtension\Context\DrupalLoginContext
-        - Drupal\DrupalExtension\Context\ScreenshotContext
+        # - Drupal\DrupalMoreExtensions\Context\DrupalLoginContext
+        - Drupal\DrupalMoreExtensions\Context\ScreenshotContext
 
   extensions:
     Behat\MinkExtension:
